[metadata]
name=diode-measurement
version=attr: diode_measurement.__version__
description=IV/CV measurements for silicon sensors.
long_description=file: README.md
long_description_content_type=text/markdown
author=Bernhard Arnold
author_email=bernhard.arnold@oeaw.ac.at
url=https://github.com/hephy-dd/diode-measurement
license=GPLv3
classifiers=
    Framework :: PyQt5
    Programming Language :: Python :: 3

[options]
packages=find:
install_requires=
    PyQt5==5.15.*
    PyQtChart==5.15.*
    PyVISA==1.11.*
    PyVISA-py==0.5.*
    pint==0.17.*
    json-rpc==1.13.*

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts=
    diode-measurement = diode_measurement.__main__:main

[flake8]
ignored=E501
